--- a/signin.html
+++ b/signin.html
@@ -8,6 +8,13 @@
 <body>
     <div id="main">
         <h3>Sign in to your account</h3>
+        <form action="#">
+            <p>Username</p>
+            <input type="text" name="user" placeholder="Type your Name">
+            <p>Password</p>
+            <input type="text" name="password" placeholder="Type your password">
+            <p>Not a Member? <a>sign up</a></p>
+        </form>
     </div>
 </body>
 </html>
