--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
   <title>About Us</title>
   <style>
     body {
-      background-color: lightblue;   /* page background */
+      background-color: purple;   /* page background */
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 200px;
+      padding: 200 px;
     }
 
     h1 {
@@ -42,3 +42,4 @@
   <a href="index.html">Go Back to Home</a>
 </body>
 </html>
+
