--- a/signin.html
+++ b/signin.html
@@ -7,29 +7,50 @@
     <style>
         body{
             background-color: purple;
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            box-sizing: border-box;
         }
         #main{
             background-color: whitesmoke;
-            border: 2px solid white;    
-            width: 300px;
-            height: 350px;
-            padding-top: 10px;
-            margin-top: 200px;
-            margin-left: 600px;
-            padding-left: 50px;
+            border: 2px solid white;
+            width: 320px;
+            max-width: 100%;
+            /* let height grow with content instead of fixed height */
+            padding: 16px 24px;
             border-radius: 20px;
-            padding-bottom: 20px;
+            box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+        }
+        #main h2{
+            margin: 0 0 12px 0;
+            font-size: 1.1rem;
+        }
+        #main p{
+            margin: 8px 0 6px 0;
+        }
+        #main input{
+            width: calc(100% - 10px);
+            padding: 8px;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+            margin-bottom: 8px;
         }
         button{
             background-color: purple;
             color: white;
             text-align: center;
-            /* height: 30px; */
             width: 8rem;
             padding: 10px;
-            margin:1rem auto ;
+            margin: 1rem auto;
             border-radius: 20px;
-            border: 5px black;
+            border: none;
+            display: block;
+            cursor: pointer;
         }
         button:hover{
             background-color: red;
