--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <li><a href="about.html">About us</a>|</li>
         <li><a href="signin.html">Sign in</a></li>
     </ul></nav></div>   
-    <center><h1 style="color: purple;">Your City Weather</h1><p style="color: purple;">Get accurate weather forcasts and real-time uptades for any location worldwide</p></center>
-    <div id="cd"><div id="Main">
+    <center><h1 style="color: purple;">Your City Weather</h1><p style="color: purple;">Get accurate weather forecasts and real-time updates for any location worldwide</p></center>
+    <div id="cd"><div id="Main"><div id="search-box">
     <input id="weather" type="text" placeholder="Enter the city">
-    <button onclick="addweather()">Search</button>
+    <button onclick="addweather()">Search</button></div>
     <div id="result"></div></div></div>
 </body>
 <script src="script.js"></script>
